# agih

./: .gitignore  .mikec  README.md  discord_events.txt  final_results.json  main.py  pyproject.toml  standup.md
agents/: __init__.py  reporter.py  researcher.py  supervisor.py  utils.py
ai_events_scraper.egg-info/: PKG-INFO  SOURCES.txt
doc/: md output format  midway output format  standup.md
